--- a/index.html
+++ b/index.html
@@ -19,29 +19,31 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <div class="main-container">
-    <div class="container">
-      <div class="img-container"><img src="./images/image-product-desktop.jpg" alt=""></div>
-      <div class="imgs-container"><img src="./images/image-product-mobile.jpg" alt=""></div>
-      <div class="text-container">
-        <h4 id="header">PERFUME</h4>
-        <h1>Gabrielle <br> Essence Eau <br> De Parfum</h1>
-        <p>A floral, solar and voluptuous interpretation composed by Olivier Polge Perfumer-Creator for the House of CHANEL.</p>
-        <div class="price">
-          <h1>$149.99</h1>
-          <h4>$169.99</h4>
+  <main>
+    <div class="main-container">
+      <div class="container">
+        <div class="img-container"><img src="./images/image-product-desktop.jpg" alt=""></div>
+        <div class="imgs-container"><img src="./images/image-product-mobile.jpg" alt=""></div>
+        <div class="text-container">
+          <h4 id="header">PERFUME</h4>
+          <h1>Gabrielle <br> Essence Eau <br> De Parfum</h1>
+          <p>A floral, solar and voluptuous interpretation composed by Olivier Polge Perfumer-Creator for the House of CHANEL.</p>
+          <div class="price">
+            <h1>$149.99</h1>
+            <h4>$169.99</h4>
+          </div>
+          <button><img src="./images/icon-cart.svg" alt="">Add to Cart</button>
+  
         </div>
-        <button><img src="./images/icon-cart.svg" alt="">Add to Cart</button>
-
       </div>
     </div>
-  </div>
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Olaniyan Ayo</a>.
-  </div>
+  </main>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Olaniyan Ayo</a>.
+    </div>
+  </footer>
 </body>
 </html>
